@@ -114,5 +114,6 @@ COM_INSTALLER_UPLOAD_PACKAGE_FILE="Upload Package File"
 COM_INSTALLER_VALUE_CLIENT_SELECT="- Select Location -"
 COM_INSTALLER_VALUE_FOLDER_NONAPPLICABLE="N/A"
 COM_INSTALLER_VALUE_FOLDER_SELECT="- Select Folder -"
+COM_INSTALLER_VALUE_STATE_SELECT="- Select State -"
 COM_INSTALLER_VALUE_TYPE_SELECT="- Select Type -"
 COM_INSTALLER_XML_DESCRIPTION="Installer component for adding, removing and upgrading extensions"
