@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 03-Jul-2010 Jean-Marie Simonet
  # [#20796] Joomla! caches ALL HTML in 1 file. Thanks Klas.
+ # [#21285] Missing "State" filter for page Extension Manager: Manage
  
 02-Jul-2010 Jean-Marie Simonet
  # [#21284] * Language sorting by id broken
